Começando a aplicar a logica de testes nos services